--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,30 @@
-### Define when CI runs
 name: CI Validation
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-### Define the Runner Environment
+    branches: ["main"]
+
 jobs:
   validate:
     runs-on: ubuntu-latest
-### Check out the repository code
     steps:
-      -name: Check out repository
-      uses: actions/checkout@v4
-### Install system dependencies
-      - name: Install system dependecies
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Install system dependencies
         run: |
-          sudo apt install
-          sudo apt install -y python3 python3-tk
-### Install python dependencies (Comment out)
-#- name: Install python dependencies
-#  run: |
-#    if [ -f requirements.txt ]; then
-#      python3 -m pip install --user -r requirements.txt
-#    fi
-### Validate python code without launching GUI
-        - name: Validate Python syntex
-          run: |
-            python3 -m py_compile app/main.py
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-tk
+
+      # Install python dependencies (uncomment if needed)
+      # - name: Install python dependencies
+      #   run: |
+      #     if [ -f requirements.txt ]; then
+      #       python3 -m pip install --user -r requirements.txt
+      #     fi
+
+      - name: Validate Python syntax
+        run: |
+          python3 -m py_compile app/main.py
